[project]
name = "planningpoker"
version = "1.0.0"
description = ""
authors = [
    {name = "Vladislave"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "idna (>=3.10,<4.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "dependency-injector (>=4.45.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
